# controller

./: .gitignore  Cargo.toml  LICENSE
.github/: release-drafter.yml
.github/workflows/: build.yml  release-drafter.yml  release.yml
debian/: postinst  preinst  service
default/: config.yaml
src/: config.rs  database.rs  entity.rs  error.rs  main.rs  trigger.rs
