[package]
name = "ble-fencer"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.15.7", features = ["bluetoothd", "id"] }
futures = "0.3.27"
tokio = { version = "1.27.0", features = ["io-std", "io-util", "process", "rt-multi-thread"] }
env_logger = "0.10.0"
log = "0.4.17"
aes = "0.8.2"
serde = { version = "1.0.159", features = ["derive"] }
serde_yaml = "0.9.19"
derive_more = "0.99.17"
byteorder = "1.4.3"
chrono = "0.4.24"
hex = "0.4.3"
rusqlite = { version = "0.29.0", features = ["bundled"] }
reqwest = { version = "0.11.15", features = ["json"] }
urlencoding = "2.1.2"
clap = { version = "4.1.14", features = ["derive"] }

[package.metadata.deb]
maintainer-scripts = "debian/"
systemd-units = { enable = true }
maintainer = "Fabian Faßbender <fabian.fassbender42@googlemail.com>"
copyright = "2022, Fabian Faßbender <fabian.fassbender42@googlemail.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
BLE fencer enables detecting BLE tags securly. It can trigger\
Home Assistant sensors if it detects a tag.
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/ble-fencer", "usr/bin/", "755"],
    ["default/config.yaml", "etc/ble-fencer/", "644"],
]
conf-files = [
    "/etc/ble-fencer/config.yaml"
]
